--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,8 +1,9 @@
-﻿soportar otros tipos de datos??
-Dialogs de carpeta y dic
-exportador a csv
-labels con > 2000 valores impide "custom tables"
-
+﻿OK soportar otros tipos de datos??
+OK Dialogs de carpeta y dic
 OK hacer un buscador optimista de secuencias de entidades
 OK test censo 2001
 OK poner botones de "abrir" y "guardar como"??
+
+exportador a csv
+warning para labels con > 2000 valores impide "custom tables"
+base de ejemplo
