--- a/src/todo.txt
+++ b/src/todo.txt
@@ -4,7 +4,10 @@ OK hacer un buscador optimista de secuencias de entidades
 OK test censo 2001
 OK poner botones de "abrir" y "guardar como"??
 
+bajar de la web
+hacer un versions
+
 estaría bueno arrastrar las 'codesVariable' de las entidades superiores hacia abajo.
-exportador a csv
+OK exportador a csv
 warning para labels con > 2000 valores impide "custom tables"
 base de ejemplo
